--- a/copilot/comparing-copilot-vs-qodo.mdx
+++ b/copilot/comparing-copilot-vs-qodo.mdx
@@ -10,7 +10,9 @@ metaDescription: 'Compare GitHub Copilot and Qodo Gen features, pricing, and cap
 canonicalUrl: ''
 ---
 
-As AI-powered development tools continue to reshape how we write code, GitHub Copilot and Qodo Gen stand out as two prominent solutions in the market. Both tools offer sophisticated AI-powered code assistance, but they differ significantly in their approach to test generation and code review capabilities. This comparison will help you understand the key differences and make an informed decision for your development needs.
+As AI-powered developer tools continue to reshape how we write code, [GitHub Copilot](https://github.com/home) and [Qodo Gen](https://www.qodo.ai/) stand out as two prominent solutions in the market. Both offer sophisticated AI programming, but they differ significantly in their approach to test generation and code review capabilities. 
+
+This comparison will help you understand the key differences and make an informed decision for your development needs.
 
 ## Feature Comparison
 
@@ -29,7 +31,7 @@ As AI-powered development tools continue to reshape how we write code, GitHub Co
     ['JetBrains Support', '✓', '✓'],
     ['NVIM Support', '✓', '✗'],
     ['Models Supported', 'GPT-4, Custom Models', 'GPT-4, Claude 3.5, Gemini'],
-    ['Pricing', 'Individual $10/mo, Business $19/mo, Enterprise', 'From $10/month individual']
+    ['Pricing', 'Free + Team $4/user/mo + Enterprise $21/user/mo', 'Free Developer tier + Teams $19/user/mo + Enterprise custom price']
 ]
 
 ## Code Completion
@@ -38,7 +40,7 @@ As AI-powered development tools continue to reshape how we write code, GitHub Co
 GitHub Copilot provides real-time code suggestions as you type, offering whole-line and full-function completions across multiple programming languages. Its context-aware suggestions are based on your entire codebase, making it particularly effective at understanding project-specific patterns and conventions. The tool excels at converting comments to code and handling repetitive coding patterns.
 
 ### Qodo Gen
-Qodo Gen focuses on smart code completion with AI-driven suggestions that adapt to individual programming styles. While it offers similar real-time completion capabilities, it distinguishes itself by integrating more closely with test generation and code review workflows, providing a more comprehensive approach to code quality alongside completions.
+Qodo Gen focuses on smart code completion, with AI-driven suggestions that adapt to individual programming styles. While it offers similar real-time completion capabilities, it distinguishes itself by integrating more closely with test generation and code review workflows, providing a more comprehensive approach to code quality alongside completions.
 
 ## AI Chat Capabilities
 
@@ -67,16 +69,42 @@ Qodo Gen emphasizes privacy through encrypted code snippet transmission and allo
 ## Pricing
 
 ### GitHub Copilot
-- **Individual Plan**: $10/month or $100/year
-- **Enterprise Plan**: $19/user/month
-- **Business Plan**: Custom pricing for large organizations
-- **Education**: Free for verified students and educators
+- **Free Plan**
+  - Free for individual users
+  - Unlimited public/private repositories
+  - Automatic security and version updates
+  - 2000 CI/CD minutes per month
+  - 500MB of Packages storage
+- **Team Plan**
+  - $4 per user, per month
+  - Access to GitHub Codespaces 
+  - Protected branches
+  - 3000 CI/CD minutes per month
+  - 2GB of Packages storage
+- **Enterprise Plan**
+  - $21 per user, per month
+  - Data residency 
+  - Enterprise managed users
+  - 50,000 CI/CD minutes per month
+  - 50GB of Packages storage
 
 ### Qodo Gen
-- **Free Tier**: Basic features for individual developers
-- **Pro Tier**: Advanced features including AI-assisted code completion
-- **Enterprise**: Custom pricing for team and enterprise needs
-(Note: Exact pricing for Pro Tier not provided in documentation)
+- **Developer Tier**
+  - Free
+  - Access to basic features
+  - Suitable for individual developers
+  - Basic IDE integration
+- **Teams Tier**
+  - $19 per user, per month
+  - Enhanced AI-assisted code completion
+  - Pre-pull request review inside the IDE
+  - Standard support
+- **Enterprise Tier**
+  - Custom pricing
+  - Self-hosted solution
+  - Full organization codebase awareness
+  - Enterprise SSO
+  - Priority support
 
 ## Conclusion
 
