--- a/cursor/comparing-cursor-vs-codeium.mdx
+++ b/cursor/comparing-cursor-vs-codeium.mdx
@@ -10,7 +10,9 @@ metaDescription: 'In-depth comparison of Cursor and Codeium, exploring features,
 canonicalUrl: ''
 ---
 
-As AI-powered development tools continue to reshape how we write code, Cursor and Codeium stand out as two prominent solutions in the market. Both tools offer advanced AI-powered code completion and assistant capabilities, but Cursor takes a more integrated approach as a full IDE fork of VS Code, while Codeium focuses on being a versatile plugin across multiple development environments. This comparison will help you understand the key differences and make an informed decision for your development needs.
+As AI-powered developer tools continue to reshape how we write code, [Cursor](https://www.trycursor.com/) and [Codeium](https://codeium.com/) stand out as two prominent solutions in the market. Both offer advanced AI-powered code completion and assistant capabilities, but Cursor takes a more integrated approach as a full IDE fork of VS Code, while Codeium focuses on being a versatile plugin across multiple development environments. 
+
+This comparison will help you understand the key differences and make an informed decision for your development needs.
 
 ## Feature Comparison
 
@@ -29,13 +31,13 @@ As AI-powered development tools continue to reshape how we write code, Cursor an
    ['JetBrains Support', '✗', '✗'],
    ['NVIM Support', '✗', '✗'],
    ['Models Supported', 'GPT-4, Claude 3.5, Custom', 'GPT-4o, Claude 3.5'],
-   ['Pricing', 'Free tier + Pro $20/mo', 'Free, Pro $15/mo, Ultimate $60/mo']
+   ['Pricing', 'Free + Pro $15/mo + Pro Ultimate $60/mo', 'Free Hobby Tier + Pro $20/mo + Business $40/user/mo']
 ]
 
 ## Code Completion
 
 ### Cursor
-Cursor offers comprehensive code completion through its Cursor Tab feature, providing intelligent suggestions for entire code blocks and multi-line changes. It's particularly strong at modifying existing code and making context-aware suggestions based on recent changes and linter errors. Users can partially accept suggestions using Ctrl/⌘ →, offering granular control over code implementation.
+Cursor offers comprehensive code completion through its Cursor Tab feature, providing intelligent suggestions for entire code blocks and multi-line changes. It's particularly strong at modifying existing code and making context-aware suggestions based on recent changes and linter errors. Users can also partially accept suggestions using Ctrl/⌘ →, offering granular control over code implementation.
 
 ### Codeium
 Codeium's code completion is deeply integrated into various IDEs and offers contextually aware in-line and multi-line suggestions. It specializes in providing relevant code snippets and boilerplate code, with support for fill-in-the-middle completions. The system adapts to your coding style over time, making increasingly relevant suggestions.
@@ -46,39 +48,68 @@ Codeium's code completion is deeply integrated into various IDEs and offers cont
 Cursor's AI chat system is deeply integrated into the editor, offering context-aware code discussions with support for multiple AI models. It features code block generation with instant apply functionality, chat history preservation, and automatic inclusion of relevant file context. The system also includes web search capabilities for up-to-date information.
 
 ### Codeium
-Codeium's Cascade feature provides an agentic chatbot that maintains awareness of prior actions and context. It operates in two distinct modes: Write for making direct codebase modifications and Chat for general inquiries and discussions. The chat system is designed to work seamlessly within the IDE environment.
+Codeium's Cascade feature provides an agentic chatbot that maintains awareness of prior actions and context. It operates in two distinct modes: Write for making direct codebase modifications, and Chat for general inquiries and discussions. The chat system is designed to work seamlessly within the IDE environment.
 
 ## Context Awareness
 
 ### Cursor
-Cursor excels in codebase understanding through automatic indexing and embeddings-based search for accurate code references. It offers customizable indexing rules via .cursorignore and maintains a privacy-focused design without plaintext code storage. The system provides comprehensive context awareness across the entire project.
+Cursor excels in codebase understanding through automatic indexing and embeddings-based search for accurate code references. It offers customizable indexing rules via .cursorignore, and maintains a privacy-focused design without plaintext code storage. The system provides comprehensive context awareness across the entire project.
 
 ### Codeium
-Codeium leverages its AI models to maintain context awareness across files and projects. The system can understand and reference code across different parts of your codebase, making it effective for large-scale projects. It adapts to project-specific patterns and conventions over time.
+Codeium leverages its AI models to maintain context awareness across files and projects. The system can also understand and reference code across different parts of your codebase, making it effective for large-scale projects. Lastly, it can adapt to project-specific patterns and conventions over time.
 
 ## Privacy and Security
 
 ### Cursor
-Cursor emphasizes privacy with an optional Privacy Mode to prevent code storage, no permanent storage of plaintext code, and local processing of sensitive information. It offers transparent data handling policies and configurable codebase indexing, giving users control over their data security.
+Cursor emphasizes privacy with an optional Privacy Mode to prevent code storage, no permanent storage of plaintext code, and local processing of sensitive information. It also offers transparent data handling policies and configurable codebase indexing, giving users control over their data security.
 
 ### Codeium
-Codeium prioritizes user privacy with clear data handling policies and the ability to opt out of code snippet telemetry directly from account settings. Users maintain full control over what data is shared, and the platform implements robust measures to safeguard personal information and code.
+Codeium prioritizes user privacy with clear data handling policies, and the ability to opt out of code snippet telemetry directly from account settings. Users maintain full control over what data is shared, and the platform implements robust measures to safeguard personal information and code.
 
 ## Pricing
 
 ### Cursor
-- **Hobby (Free)**: 14-day Pro trial, 50 slow premium model uses, 200 cursor-small uses, 2,000 completions
-- **Pro**: $20/month - 500 fast premium model uses, unlimited slow premium model uses, unlimited completions, 10 Claude Opus uses
-- **Business**: Custom pricing - Same as Pro plus team management and advanced administration tools
+- **Hobby**
+  - Free for individual users
+  - Pro two week trial
+  - 2000 completions
+  - 50 slow premium requests
+- **Pro**
+  - $20 per month
+  - Unlimited completions
+  - 500 fast premium requests
+  - Unlimited slow premium requests
+  - 10 o1-mini uses per day
+ - **Business**
+  - $40 per user, per month
+  - Enforce privacy mode org-wide
+  - Centralized team billing
+  - Admin dashboard with usage stats
+  - SAML/OIDC SSO
 
 ### Codeium
-- **Free Plan**: 5 User Prompt credits, 5 Flow Action credits
-- **Free Trial**: 50 User Prompt credits, 200 Flow Action credits (2 weeks)
-- **Pro Plan**: $15/month - 500 User Prompt credits, 1500 Flow Action credits
-- **Pro Ultimate**: $60/month - Unlimited User Prompt credits, 3000 Flow Action credits
+- **Free Plan**
+  - 5 User Prompt credits
+  - 5 Flow Action credits
+  - Cannot purchase more premium model credits
+  - Access to Cascade Base Model
+- **Pro Plan**
+  - $15 per month
+  - 500 User Prompt credits
+  - 1500 Flow Action credits
+  - Ability to purchase more premium model credits
+  - Priority unlimited access to Cascade Base Model
+- **Pro Ultimate**
+  - $60 per month
+  - Unlimited User Prompt credits
+  - 3000 Flow Action credits
+  - Ability to purchase more premium model credits
+  - Priority unlimited access to Cascade Base Model
 
 ## Conclusion
 
 Cursor and Codeium represent two different approaches to AI-powered development tools. Cursor offers a more integrated experience as a complete IDE solution, making it ideal for developers who want a dedicated environment with deep AI integration. Its robust features and VS Code compatibility make it particularly attractive for teams already working in the Microsoft ecosystem.
 
-Codeium, on the other hand, shines in its flexibility and broad IDE support, making it an excellent choice for developers who work across multiple environments or prefer to stay with their current IDE setup. Its more competitive pricing and extensive integration options make it particularly attractive for individual developers and smaller teams. Both tools offer strong AI capabilities, and the choice between them often comes down to whether you prefer a dedicated IDE (Cursor) or a more flexible plugin-based approach (Codeium).
+Codeium, on the other hand, shines in its flexibility and broad IDE support, making it an excellent choice for developers who work across multiple environments or prefer to stay with their current IDE setup. Its more competitive pricing and extensive integration options make it particularly attractive for individual developers and smaller teams. 
+
+Both tools offer strong AI capabilities, and the choice between them often comes down to whether you prefer a dedicated IDE (Cursor) or a more flexible plugin-based approach (Codeium).
