--- a/cursor/comparing-cursor-vs-continue.mdx
+++ b/cursor/comparing-cursor-vs-continue.mdx
@@ -10,7 +10,9 @@ metaDescription: 'Comprehensive comparison of Cursor and Continue AI code editor
 canonicalUrl: ''
 ---
 
-As AI-powered development tools continue to reshape how we write code, Cursor and Continue stand out as two prominent solutions in the market. Both tools offer AI-powered code assistance and IDE integration, but while Cursor operates as a full VS Code fork with deep AI integration, Continue takes a more platform-agnostic approach as an open-source extension. This comparison will help you understand the key differences and make an informed decision for your development needs.
+As AI-powered developer tools continue to reshape how we write code, [Cursor](https://www.trycursor.com/) and [Continue](https://www.continue.dev/enterprise) stand out as two prominent solutions in the market. Both offer AI-powered code assistance and IDE integration, but while Cursor operates as a full VS Code fork with deep AI integration, Continue takes a more platform-agnostic approach as an open-source extension. 
+
+This comparison will help you understand the key differences and make an informed decision for your development needs.
 
 ## Feature Comparison
 
@@ -29,7 +31,7 @@ As AI-powered development tools continue to reshape how we write code, Cursor an
    ['JetBrains Support', '✗', '✓'],
    ['NVIM Support', '✗', '✗'],
    ['Models Supported', 'GPT-4, Claude, Custom', 'Universal and Custom Models'],
-   ['Pricing', 'Free tier + Pro $20/mo', 'Free tier + Enterprise plans']
+   ['Pricing', 'Free Hobby Tier + Pro $20/mo + Business $40/user/mo', 'Free + Enterprise plans']
 ]
 
 ## Code Completion
@@ -67,29 +69,37 @@ As an open-source solution, Continue provides complete transparency in its code 
 ## Pricing
 
 ### Cursor
-- **Hobby (Free)**
-  - 14-day Pro trial
-  - 50 slow premium model uses
-  - 200 cursor-small uses
-  - 2,000 completions
+- **Hobby**
+  - Free for individual users
+  - Pro two week trial
+  - 2000 completions
+  - 50 slow premium requests
 - **Pro**
-  - 500 fast premium model uses per month
-  - Unlimited slow premium model uses
-  - Unlimited cursor-small uses
+  - $20 per month
   - Unlimited completions
-  - 10 Claude Opus uses per month
-- **Business**
-  - All Pro features
-  - Team management features
-  - Advanced administration tools
+  - 500 fast premium requests
+  - Unlimited slow premium requests
+  - 10 o1-mini uses per day
+ - **Business**
+  - $40 per user, per month
+  - Enforce privacy mode org-wide
+  - Centralized team billing
+  - Admin dashboard with usage stats
+  - SAML/OIDC SSO
 
 ### Continue
 - **Free Open Source**
-  - All features included
-  - No usage limits
-  - Community support
-  - Regular updates
-  - Multiple model support
+  - Free forever
+  - Real-time code suggestions
+  - Automated refactoring
+  - Testing and debugging assistance
+  - Seamless IDE integration
+- **Enterprise**
+  - Enhanced features
+  - Scalability
+  - Enhanced security and privacy
+  - Dedicated support
+  - Collaboration tools
 
 ## Conclusion
 
