--- a/cursor/comparing-cursor-vs-copilot.mdx
+++ b/cursor/comparing-cursor-vs-copilot.mdx
@@ -10,7 +10,9 @@ metaDescription: 'Detailed comparison of Cursor and GitHub Copilot, exploring th
 canonicalUrl: ''
 ---
 
-As AI-powered development tools continue to reshape how we write code, Cursor and GitHub Copilot stand out as two prominent solutions in the market. Both tools offer advanced AI-powered code completion and assistance, but Cursor distinguishes itself with its VS Code fork approach while GitHub Copilot focuses on broader IDE integration. This comparison will help you understand the key differences and make an informed decision for your development needs.
+As AI-powered developer tools continue to reshape how we write code, [Cursor](https://www.trycursor.com/) and [GitHub Copilot](https://github.com/home) stand out as two prominent solutions in the market. Both offer advanced AI-powered code completion and assistance, but Cursor distinguishes itself with its VS Code fork approach, while GitHub Copilot focuses on broader IDE integration. 
+
+This comparison will help you understand the key differences and make an informed decision for your development needs.
 
 ## Feature Comparison
 
@@ -29,7 +31,7 @@ As AI-powered development tools continue to reshape how we write code, Cursor an
    ['JetBrains Support', '✗', '✓'],
    ['NVIM Support', '✗', '✓'],
    ['Models Supported', 'GPT-4, Claude, Custom', 'GPT-4, Custom Models'],
-   ['Pricing', 'Free tier + Pro $20/mo', 'Individual $10/mo, Business $19/mo, Enterprise']
+   ['Pricing', 'Free Hobby Tier + Pro $20/mo + Business $40/user/mo', 'Free + Team $4/user/mo + Enterprise $21/user/mo']
 ]
 
 ## Code Completion
@@ -67,37 +69,48 @@ GitHub Copilot processes code suggestions locally, complying with GitHub's priva
 ## Pricing
 
 ### Cursor
-- **Hobby (Free)**
-  - 14-day Pro trial
-  - 50 slow premium model uses
-  - 200 cursor-small uses
-  - 2,000 completions
-- **Pro ($20/month)**
-  - 500 fast premium model uses per month
-  - Unlimited slow premium model uses
-  - Unlimited cursor-small uses
+- **Hobby**
+  - Free for individual users
+  - Pro two week trial
+  - 2000 completions
+  - 50 slow premium requests
+- **Pro**
+  - $20 per month
   - Unlimited completions
-  - 10 Claude Opus uses per month
-- **Business (Custom pricing)**
-  - Same usage as Pro tier
-  - Additional team management features
-  - Advanced administration tools
+  - 500 fast premium requests
+  - Unlimited slow premium requests
+  - 10 o1-mini uses per day
+ - **Business**
+  - $40 per user, per month
+  - Enforce privacy mode org-wide
+  - Centralized team billing
+  - Admin dashboard with usage stats
+  - SAML/OIDC SSO
 
 ### GitHub Copilot
-- **Individual ($10/month)**
-  - Full access to all core features
-  - Available monthly/annual billing
-- **Business ($19/user/month)**
-  - Team and enterprise features
-  - Advanced security controls
-  - Enhanced management capabilities
-- **Enterprise (Custom pricing)**
-  - Volume licensing
-  - Custom solutions
-  - Advanced security features
+- **Free Plan**
+  - Free for individual users
+  - Unlimited public/private repositories
+  - Automatic security and version updates
+  - 2000 CI/CD minutes per month
+  - 500MB of Packages storage
+- **Team Plan**
+  - $4 per user, per month
+  - Access to GitHub Codespaces 
+  - Protected branches
+  - 3000 CI/CD minutes per month
+  - 2GB of Packages storage
+- **Enterprise Plan**
+  - $21 per user, per month
+  - Data residency 
+  - Enterprise managed users
+  - 50,000 CI/CD minutes per month
+  - 50GB of Packages storage
 
 ## Conclusion
 
 Both Cursor and GitHub Copilot offer powerful AI-assisted development capabilities, but they cater to slightly different needs. Cursor excels in its deep VS Code integration and multiple AI model support, making it particularly attractive for developers who prefer a more customizable experience with access to different AI models. The platform's focus on privacy and comprehensive chat features makes it a strong choice for teams requiring detailed code discussions and explanations.
 
-GitHub Copilot, on the other hand, offers broader IDE support and deeper integration with the GitHub ecosystem, making it an excellent choice for developers working across multiple platforms or those heavily invested in the GitHub environment. Its more accessible pricing structure and established market presence make it a safe choice for individuals and teams looking for a reliable AI coding assistant. The choice between the two ultimately depends on specific needs regarding IDE support, pricing constraints, and desired AI model flexibility.
+GitHub Copilot, on the other hand, offers broader IDE support and deeper integration with the GitHub ecosystem, making it an excellent choice for developers working across multiple platforms, or those heavily invested in the GitHub environment. Its more accessible pricing structure and established market presence make it a safe choice for individuals and teams looking for a reliable AI coding assistant. 
+
+Ultimately, the choice between the two largely depends on specific needs regarding IDE support, pricing constraints, and desired AI model flexibility.
